# realtime-cloth-granular

./: .gitignore  EXPERIMENT_LOG.md  README.md  pyproject.toml  requirements.txt  계획서.md  설명서.md
data/configs/: default_jkr.yaml  demo_a_lying.yaml  demo_b_humidity_long.yaml  jkr_dominant.yaml  jkr_dominant_no_sat.yaml
notebooks/: jkr_curve_explore.ipynb
results/ablation_b1/: b1_log.npz
results/humidity_sweep/: humidity_sweep.npz
results/humidity_sweep_jkr/: humidity_sweep.npz
results/humidity_sweep_multiseed/: humidity_sweep.npz
results/jkr_dominant/: log.npz
results/radius_sweep/: radius_sweep.npz
results/radius_sweep_jkr/: radius_sweep.npz
results/radius_sweep_lam_inf/: radius_sweep.npz
results/scaling/: scaling.npz
scripts/: benchmark_scaling.py  check_env.py  plot_attach_log.py  run_ablation_b1.py  run_attach_demo.py  run_cloth_only.py  run_sand_only.py  run_unified_contact.py  sweep_gamma.py  sweep_humidity.py  sweep_radius.py
src/: __init__.py
src/cloth/: __init__.py  triangle.py  vertex.py  xpbd.py
src/coupling/: __init__.py  attach.py  attach_heuristic.py  contact.py  jkr.py
src/mpm/: __init__.py  grid.py  particles.py  sand.py
src/utils/: __init__.py  config.py  conservation.py  visualize.py
tests/: test_conservation.py  test_heuristic_attach.py  test_imports.py  test_jkr_formula.py
