[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-cloth-granular"
version = "0.1.0"
description = "Real-time cross-solver mass-transfer operator between MPM granular flow and XPBD cloth surface reservoir."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "pietis", email = "ojs8879@snu.ac.kr" }]
license = { text = "MIT" }
dependencies = [
    "taichi>=1.7.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
